// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar Component should handle displaying a group variant field: group variant, disabled 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  clearFiltersButtonText="t(curiosity-toolbar.clearFilters)"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      >
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.label_filter, {"context":"sla"})"
          chips={[]}
          deleteChip={[Function]}
          key="sla"
          showToolbarItem={true}
        >
          <Sla
            isFilter={true}
          />
        </ToolbarFilter>
      </ForwardRef>
    </ToolbarToggleGroup>
    <ForwardRef
      key="itemFields"
    />
    <ForwardRef
      alignment={
        {
          "default": "alignRight",
        }
      }
      key="secondaryFields"
    >
      <span
        key="lorem"
      >
        lorem ipsum
      </span>
    </ForwardRef>
  </ToolbarContent>
</Toolbar>
`;

exports[`Toolbar Component should handle displaying a group variant field: group variant, standalone 1`] = `
<ToolbarFieldGroupVariant
  isFilter={false}
  isStandalone={true}
  position="left"
  t={[Function]}
  useOnSelect={[Function]}
  useProduct={[Function]}
  useSelector={[Function]}
  useToolbarFieldOptions={[Function]}
/>
`;

exports[`Toolbar Component should handle displaying secondary components, fields: secondary 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  clearFiltersButtonText="t(curiosity-toolbar.clearFilters)"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarFieldGroupVariant
    isFilter={false}
    isStandalone={false}
    position="left"
    t={[Function]}
    useOnSelect={[Function]}
    useProduct={[Function]}
    useSelector={[Function]}
    useToolbarFieldOptions={[Function]}
  />
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      >
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.label_filter, {"context":"sla"})"
          chips={[]}
          deleteChip={[Function]}
          key="sla"
          showToolbarItem={true}
        >
          <Sla
            isFilter={true}
          />
        </ToolbarFilter>
      </ForwardRef>
    </ToolbarToggleGroup>
    <ForwardRef
      key="itemFields"
    />
    <ForwardRef
      alignment={
        {
          "default": "alignRight",
        }
      }
      key="secondaryFields"
    >
      <span
        key="lorem"
      >
        lorem ipsum
      </span>
    </ForwardRef>
  </ToolbarContent>
</Toolbar>
`;

exports[`Toolbar Component should handle updating toolbar chips: chips 1`] = `
{
  "categoryName": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
  "children": <Sla
    isFilter={true}
  />,
  "chips": [
    "t(curiosity-toolbar.label_sla, {"context":"Premium"})",
  ],
  "deleteChip": [Function],
  "showToolbarItem": true,
}
`;

exports[`Toolbar Component should handle updating toolbar chips: chips, not clearable 1`] = `
{
  "categoryName": "t(curiosity-toolbar.label_filter, {"context":"sla"})",
  "children": <Sla
    isFilter={true}
  />,
  "chips": [],
  "showToolbarItem": true,
}
`;

exports[`Toolbar Component should hide categories when a single filter is available: single filter 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  clearFiltersButtonText="t(curiosity-toolbar.clearFilters)"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarFieldGroupVariant
    isFilter={false}
    isStandalone={false}
    position="left"
    t={[Function]}
    useOnSelect={[Function]}
    useProduct={[Function]}
    useSelector={[Function]}
    useToolbarFieldOptions={[Function]}
  />
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      >
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.label_filter, {"context":"sla"})"
          chips={[]}
          deleteChip={[Function]}
          key="sla"
          showToolbarItem={true}
        >
          <Sla
            isFilter={true}
          />
        </ToolbarFilter>
      </ForwardRef>
    </ToolbarToggleGroup>
    <ForwardRef
      key="itemFields"
    />
    <ForwardRef
      alignment={
        {
          "default": "alignRight",
        }
      }
      key="secondaryFields"
    />
  </ToolbarContent>
</Toolbar>
`;

exports[`Toolbar Component should render a basic component: basic 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  clearFiltersButtonText="t(curiosity-toolbar.clearFilters)"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarFieldGroupVariant
    isFilter={false}
    isStandalone={false}
    position="left"
    t={[Function]}
    useOnSelect={[Function]}
    useProduct={[Function]}
    useSelector={[Function]}
    useToolbarFieldOptions={[Function]}
  />
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      >
        <ToolbarItem>
          <ToolbarFieldSelectCategory
            t={[Function]}
            useOnSelect={[Function]}
            useSelectCategoryOptions={[Function]}
          />
        </ToolbarItem>
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.label_filter, {"context":"sla"})"
          chips={[]}
          deleteChip={[Function]}
          key="sla"
          showToolbarItem={false}
        >
          <Sla
            isFilter={true}
          />
        </ToolbarFilter>
        <ToolbarFilter
          categoryName="t(curiosity-toolbar.label_filter, {"context":"usage"})"
          chips={[]}
          deleteChip={[Function]}
          key="usage"
          showToolbarItem={false}
        >
          <Usage
            isFilter={true}
          />
        </ToolbarFilter>
      </ForwardRef>
    </ToolbarToggleGroup>
    <ForwardRef
      key="itemFields"
    />
    <ForwardRef
      alignment={
        {
          "default": "alignRight",
        }
      }
      key="secondaryFields"
    />
  </ToolbarContent>
</Toolbar>
`;

exports[`Toolbar Component should return an empty render, or variant filter, when disabled or missing filters: disabled component 1`] = `""`;

exports[`Toolbar Component should return an empty render, or variant filter, when disabled or missing filters: missing filters, has variant filter 1`] = `
<ToolbarFieldGroupVariant
  isFilter={false}
  isStandalone={true}
  position="left"
  t={[Function]}
  useOnSelect={[Function]}
  useProduct={[Function]}
  useSelector={[Function]}
  useToolbarFieldOptions={[Function]}
/>
`;

exports[`Toolbar Component should return an empty render, or variant filter, when disabled or missing filters: missing primary, has secondary filters 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  clearAllFilters={[Function]}
  clearFiltersButtonText="t(curiosity-toolbar.clearFilters)"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarFieldGroupVariant
    isFilter={false}
    isStandalone={false}
    position="left"
    t={[Function]}
    useOnSelect={[Function]}
    useProduct={[Function]}
    useSelector={[Function]}
    useToolbarFieldOptions={[Function]}
  />
  <ToolbarContent
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarToggleGroup
      breakpoint="md"
      toggleIcon={
        <FilterIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      }
    >
      <ForwardRef
        variant="filter-group"
      />
    </ToolbarToggleGroup>
    <ForwardRef
      key="itemFields"
    />
    <ForwardRef
      alignment={
        {
          "default": "alignRight",
        }
      }
      key="secondaryFields"
    >
      <span
        key="lorem"
      >
        lorem ipsum
      </span>
    </ForwardRef>
  </ToolbarContent>
</Toolbar>
`;
